# Big-Data-Project

./: .gitignore  BATCH-PROCESSING.md  CASSANDRA-NOTES.md  DEMO-CHECKLIST.md  DEMO-GUIDE.md  GRAFANA-SETUP.md  LAMBDA-ARCHITECTURE.md  QUICKSTART.md  README-K8S.md  README.md  compose.yaml  pyproject.toml  query-cassandra.sh  run-batch-pipeline.sh  start-pipeline.sh  stop-pipeline.sh
cassandra/: README.md  init.cql  init_unified.cql  init_v2.cql  init_v3.cql  init_v4.cql  init_v5.cql
generator/: generator.py
grafana/provisioning/dashboards/: avg-fare-per-mile-dashboard.json  avg-speed-dashboard.json  taxi-dashboard.json  taxi-dashboard.json.old  taxi-dashboardv2.json  top-revuene-dashboard.json  trip-demand-dashboard.json  unified-dashboard.json  untested-taxi-dashboard.json
grafana/provisioning/datasources/: cassandra.yaml
hdfs/: core-site.xml  hadoop.env  hdfs-site.xml  upload_to_hdfs.py
k8s/: kustomization.yaml  namespace.yaml
k8s/apps/: Dockerfile.consumer  Dockerfile.producer  consumer-deployment.yaml  consumer-k8s.py  producer-job.yaml  producer-k8s.py
k8s/cassandra/: cassandra-statefulset.yaml
k8s/kafka/: kafka-cluster.yaml  kafka-deployment.yaml  kafka-service.yaml  kafka-topic.yaml
k8s/schema-registry/: schema-registry-deployment.yaml  schema-registry-service.yaml
k8s/storage/: persistent-volumes.yaml
kafka/: producer.py
spark/: streaming.py  streaming_unified.py  streaming_v2.py  streaming_v3.py  streaming_v4.py  streaming_v5.py
survey/: NoSQL-Cassandra.md
test/: go.mod  test_gocql.go
