[project]
name = "big-data-project"
version = "0.1.0"
description = "NYC Taxi Trip Streaming Pipeline: Kafka → Spark → Cassandra → Grafana"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cassandra-driver>=3.29.3",
    "confluent-kafka[avro]>=2.12.0",
    "polars>=1.34.0",
    "pyarrow>=22.0.0",
    "pyspark==3.5.7",
]
